--- a/portfolio.html
+++ b/portfolio.html
@@ -28,21 +28,19 @@
         </nav>
         <ul class="auth-nav">
           <li class="auth-nav-item">
-            <a href="" class="auth-nav-link-svg" width="16" height="12">
+            <a href="mailto:info@devstudio.com" class="auth-nav-link">
               <svg class="auth-nav-svg" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope" class="auth-nav-icon"></use>
               </svg>
-            </a>
-            <a href="mailto:info@devstudio.com" class="auth-nav-link">
-              info@devstudio.com</a>
+              <span>info@devstudio.com</span></a>
           </li>
           <li class="auth-nav-item">
-            <a href="" class="auth-nav-link-svg  phone" width="10" height="16">
+            <a href="tel:+380961111111" class="auth-nav-link">
               <svg class="auth-nav-svg" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone" class="auth-nav-icon"></use>
               </svg>
+              <span>+38 096 111 11 11</span>
             </a>
-            <a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
