--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
 
 <body>
     <!-- Шапка сайта -->
+    <!-- Шапка сайта -->
     <header class="page-header">
       <div class="container nav-container">
         <nav class="navbar">
